Modifying url of background image to fix problem on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -71,7 +71,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background: url(../content/background.jpg) no-repeat center center fixed;
+    background: url(/content/background.jpg) no-repeat center center fixed;
 }
 
 input[type=text] {
